--- a/index.html
+++ b/index.html
@@ -54,28 +54,46 @@
         <div class="container">
           <h2 class="visually-hidden">Our advantage</h2>
           <ul class="list-advantage list">
-            <li class="advantage-item">
+            <li class="advantage-item icon-antenna">
+              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-antenna">
+
+              </use>
+
+              </svg>
               <h3 class="list-title">Strategy</h3>
               <p class="list-text">
                 Our goal is to identify the business problem to walk away with the
                 perfect and creative solution.
               </p>
             </li>
-            <li class="advantage-item">
+            <li class="advantage-item icon-clock">
+              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-clock">
+
+              </use>
+
+              </svg>
               <h3 class="list-title">Punctuality</h3>
               <p class="list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="advantage-item">
+            <li class="advantage-item icon-diagram"><svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-diagram">
+
+              </use>
+
+              </svg>
               <h3 class="list-title">Diligence</h3>
               <p class="list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="advantage-item">
+            <li class="advantage-item icon-astronaut"><svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-astronaut">
+
+              </use>
+
+              </svg>
               <h3 class="list-title">Technologies</h3>
               <p class="list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -110,6 +128,25 @@
               <div class="team-content">
                 <h3 class="worker">Mark Guerrero</h3>
                 <p class="worker-title">Product designer</p>
+                <ul class="social-list_team list">
+                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
               </div>
             </li>
             <li class="team-worker img">
@@ -117,6 +154,30 @@
               <div class="team-content">
                 <h3 class="worker">Tom Ford</h3>
                 <p class="worker-title">Frontend Developer</p>
+                <ul class="social-list_team list">
+                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+                </ul>
               </div>
             </li>
             <li class="team-worker img">
@@ -124,6 +185,32 @@
               <div class="team-content">
                 <h3 class="worker">Camila Garcia</h3>
                 <p class="worker-title">Marketing</p>
+                <ul class="social-list_team list">
+                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16"><use href="./images2/icons.svg#icon-instagram">
+
+                  </use>
+
+                  </svg></a>
+                  </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-worker img">
@@ -131,21 +218,109 @@
               <div class="team-content">
                 <h3 class="worker">Daniel Wilson</h3>
                 <p class="worker-title">UI Designer</p>
+                <ul class="social-list_team list">
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  </li>
+                  <li class="social-list_icon_team"><a class="social-link" href="">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="section section-customers">
+        <div class="container">
+          <h2 class="section-title customers">Customers</h2>
+          <ul class="list-customers list">
+            <li class="customers-icon logo-one"><a class="customer-link" href="">
+              <svg class="customer-icon" width="104" height="56">
+              <use href="./images2/icons.svg#icon-Logo1"></use>
+            </svg></a></li>
+            <li class="customers-icon logo-two"><a class="customer-link" href="">
+              <svg class="customer-icon" width="104" height="56">
+              <use href="./images2/icons.svg#icon-Logo2"></use>
+            </svg></a></li>
+            <li class="customers-icon logo-three"><a class="customer-link" href="">
+              <svg class="customer-icon" width="104" height="56">
+              <use href="./images2/icons.svg#icon-Logo3"></use>
+            </svg></a></li>
+            <li class="customers-icon logo-four"><a class="customer-link" href="">
+              <svg class="customer-icon" width="104" height="56">
+              <use href="./images2/icons.svg#icon-Logo4"></use>
+            </svg></a></li>
+            <li class="customers-icon logo-five"><a class="customer-link" href="">
+              <svg class="customer-icon" width="104" height="56">
+              <use href="./images2/icons.svg#icon-Logo5"></use>
+            </svg></a></li>
+            <li class="customers-icon logo-six"><a class="customer-link" href="">
+              <svg class="customer-icon" width="104" height="56">
+              <use href="./images2/icons.svg#icon-Logo6"></use>
+            </svg></a></li>
+          </ul>
+
+        </div>
+
+      </section>
     </main>
     <footer class="section footer">
       <div class="container">
-        <a class="logo-link bottom" href="./index.html"
-          >WEB<span class="logo-light">STUDIO</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
+        <div class="wrapper">
+          <div class="footer-cont">
+            <a class="logo-link bottom" href="./index.html"
+              >WEB<span class="logo-light">STUDIO</span></a
+            >
+            <p class="text">
+              Increase the flow of customers and sales for your business with digital
+              marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-media icons">
+            <p>Social media</p>
+            <ul class="social-list list">
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-instagramfooter"></use>
+                    </svg></a>
+              </li>
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-twitterfooter"></use>
+                    </svg></a>
+              </li>
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-facebookfooter"></use>
+                    </svg></a>
+              </li>
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-linkedinfooter"></use>
+                    </svg></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
