--- a/portfolio.html
+++ b/portfolio.html
@@ -157,13 +157,42 @@
     </main>
     <footer class="section footer">
       <div class="container">
-        <a class="logo-link bottom" href="./index.html"
-          >WEB<span class="logo-light">STUDIO</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
+        <div class="wrapper">
+          <div class="footer-cont">
+            <a class="logo-link bottom" href="./index.html"
+              >WEB<span class="logo-light">STUDIO</span></a
+            >
+            <p class="text">
+              Increase the flow of customers and sales for your business with digital
+              marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-media icons">
+            <p>Social media</p>
+            <ul class="social-list list">
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-instagramfooter"></use>
+                    </svg></a>
+              </li>
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-twitterfooter"></use>
+                    </svg></a>
+              </li>
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-facebookfooter"></use>
+                    </svg></a>
+              </li>
+              <li class="social-list_icon">
+                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                      <use href="./images2/iconsfooter.svg#icon-linkedinfooter"></use>
+                    </svg></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
