--- a/index.html
+++ b/index.html
@@ -1,40 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-Studio</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+<link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
   </head>
   <body>
     <header class="section page-header">
       <div class="container header-container">
         <nav class="nav-header">
-          <a class="logo-link" href="./index.html"
-            >WEB<span class="logo-dark">STUDIO</span></a
-          >
+          <a class="logo-link" href="./index.html">WEB<span class="logo-dark">STUDIO</span></a>
           <ul class="nav-header list">
             <li class="item"><a class="link nav current" href="./index.html">Studio</a></li>
             <li class="item">
               <a class="link nav" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="item"><a class="link nav" href="">Contacts</a></li>
+            <li class="item"><a class="link nav" href>Contacts</a></li>
           </ul>
         </nav>
         <address class="address-header">
           <ul class="list-address list">
             <li class="item">
-              <a class="mail link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="item">
               <a class="phone-link" href="tel:+110001111111">+11(000)111-11-11</a>
@@ -46,8 +39,8 @@
     <main>
       <section class="section hero">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions <br/> for Your Business</h1>
-          <button type="button" class="btn hero-button pointer">Order Service</button>
+          <h1 class="hero-title">Effective Solutions <br> for Your Business</h1>
+          <button class="btn hero-button pointer" type="button">Order Service</button>
         </div>
       </section>
       <section class="section section-advantage">
@@ -55,10 +48,7 @@
           <h2 class="visually-hidden">Our advantage</h2>
           <ul class="list-advantage list">
             <li class="advantage-item icon-antenna">
-              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-antenna">
-
-              </use>
-
+              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-antenna"></use>
               </svg>
               <h3 class="list-title">Strategy</h3>
               <p class="list-text">
@@ -67,10 +57,7 @@
               </p>
             </li>
             <li class="advantage-item icon-clock">
-              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-clock">
-
-              </use>
-
+              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-clock"></use>
               </svg>
               <h3 class="list-title">Punctuality</h3>
               <p class="list-text">
@@ -78,22 +65,18 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li class="advantage-item icon-diagram"><svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-diagram">
-
-              </use>
-
-              </svg>
+            <li class="advantage-item icon-diagram">
+              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-diagram"></use>
+            </svg>
               <h3 class="list-title">Diligence</h3>
               <p class="list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="advantage-item icon-astronaut"><svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-astronaut">
-
-              </use>
-
-              </svg>
+            <li class="advantage-item icon-astronaut">
+              <svg class="feature-icon" width="64" height="64"><use href="./images2/icons.svg#icon-astronaut"></use>
+            </svg>
               <h3 class="list-title">Technologies</h3>
               <p class="list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -108,13 +91,13 @@
           <h2 class="section-title doing">What Are We Doing</h2>
           <ul class="list-doing list">
             <li class="doing img">
-              <img src="./Images/img3.jpg" alt="Gadgets" width="360" />
+              <img src="./Images/img3.jpg" alt="Gadgets" width="360">
             </li>
             <li class="doing img">
-              <img src="./Images/img2.jpg" alt="Gadgets" width="360" />
+              <img src="./Images/img2.jpg" alt="Gadgets" width="360">
             </li>
             <li class="doing img">
-              <img src="./Images/img1.jpg" alt="Gadgets" width="360" />
+              <img src="./Images/img1.jpg" alt="Gadgets" width="360">
             </li>
           </ul>
         </div>
@@ -124,25 +107,28 @@
           <h2 class="section-title team">Our Team</h2>
           <ul class="team list">
             <li class="team-worker img">
-              <img src="./Images/markguerrero.jpg" alt="Employee" width="264" />
+              <img src="./Images/markguerrero.jpg" alt="Employee" width="264">
               <div class="team-content">
                 <h3 class="worker">Mark Guerrero</h3>
                 <p class="worker-title">Product designer</p>
                 <ul class="social-list_team list">
-                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                  <li class="social-list_icon_team"><a class="social-link" href>
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-twitter"></use>
                     </svg>
                   </a></li>
-                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                  <li class="social-list_icon_team"><a class="social-link" href>
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                  <li class="social-list_icon_team"><a class="social-link" href>
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a></li>
@@ -150,28 +136,29 @@
               </div>
             </li>
             <li class="team-worker img">
-              <img src="./Images/tomford.jpg" alt="Employee" width="264" />
+              <img src="./Images/tomford.jpg" alt="Employee" width="264">
               <div class="team-content">
                 <h3 class="worker">Tom Ford</h3>
                 <p class="worker-title">Frontend Developer</p>
                 <ul class="social-list_team list">
-                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16">
+                  <li class="social-list_icon_team"><a class="social-link" href>
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -181,30 +168,30 @@
               </div>
             </li>
             <li class="team-worker img">
-              <img src="./Images/camilagarcia.jpg" alt="Employee" width="264" />
+              <img src="./Images/camilagarcia.jpg" alt="Employee" width="264">
               <div class="team-content">
                 <h3 class="worker">Camila Garcia</h3>
                 <p class="worker-title">Marketing</p>
                 <ul class="social-list_team list">
-                  <li class="social-list_icon_team"><a class="social-link" href=""><svg class="social-icon" width="16" height="16"><use href="./images2/icons.svg#icon-instagram">
-
-                  </use>
-
-                  </svg></a>
+                  <li class="social-list_icon_team"><a class="social-link" href>
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images2/icons.svg#icon-instagram"></use>
+                  </svg>
+                  </a>
                   </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                   </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                   </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -214,30 +201,30 @@
               </div>
             </li>
             <li class="team-worker img">
-              <img src="./Images/danielwilson.jpg" alt="Employee" width="264" />
+              <img src="./Images/danielwilson.jpg" alt="Employee" width="264">
               <div class="team-content">
                 <h3 class="worker">Daniel Wilson</h3>
                 <p class="worker-title">UI Designer</p>
                 <ul class="social-list_team list">
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                   </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                   </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                   </li>
-                  <li class="social-list_icon_team"><a class="social-link" href="">
+                  <li class="social-list_icon_team"><a class="social-link" href>
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images2/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -253,30 +240,36 @@
         <div class="container">
           <h2 class="section-title customers">Customers</h2>
           <ul class="list-customers list">
-            <li class="customers-icon logo-one"><a class="customer-link" href="">
+            <li class="customers-icon logo-one"><a class="customer-link" href>
               <svg class="customer-icon" width="104" height="56">
               <use href="./images2/icons.svg#icon-Logo1"></use>
-            </svg></a></li>
-            <li class="customers-icon logo-two"><a class="customer-link" href="">
+            </svg></a>
+          </li>
+            <li class="customers-icon logo-two"><a class="customer-link" href>
               <svg class="customer-icon" width="104" height="56">
               <use href="./images2/icons.svg#icon-Logo2"></use>
-            </svg></a></li>
-            <li class="customers-icon logo-three"><a class="customer-link" href="">
+            </svg></a>
+          </li>
+            <li class="customers-icon logo-three"><a class="customer-link" href>
               <svg class="customer-icon" width="104" height="56">
               <use href="./images2/icons.svg#icon-Logo3"></use>
-            </svg></a></li>
-            <li class="customers-icon logo-four"><a class="customer-link" href="">
+            </svg></a>
+          </li>
+            <li class="customers-icon logo-four"><a class="customer-link" href>
               <svg class="customer-icon" width="104" height="56">
               <use href="./images2/icons.svg#icon-Logo4"></use>
-            </svg></a></li>
-            <li class="customers-icon logo-five"><a class="customer-link" href="">
+            </svg></a>
+          </li>
+            <li class="customers-icon logo-five"><a class="customer-link" href>
               <svg class="customer-icon" width="104" height="56">
               <use href="./images2/icons.svg#icon-Logo5"></use>
-            </svg></a></li>
-            <li class="customers-icon logo-six"><a class="customer-link" href="">
+            </svg></a>
+          </li>
+            <li class="customers-icon logo-six"><a class="customer-link" href>
               <svg class="customer-icon" width="104" height="56">
               <use href="./images2/icons.svg#icon-Logo6"></use>
-            </svg></a></li>
+            </svg></a>
+          </li>
           </ul>
 
         </div>
@@ -287,9 +280,8 @@
       <div class="container">
         <div class="wrapper">
           <div class="footer-cont">
-            <a class="logo-link bottom" href="./index.html"
-              >WEB<span class="logo-light">STUDIO</span></a
-            >
+            <a class="logo-link bottom" href="./index.html">WEB<span class="logo-light">STUDIO</span>
+            </a>
             <p class="text">
               Increase the flow of customers and sales for your business with digital
               marketing & growth solutions.
@@ -299,22 +291,26 @@
             <p>Social media</p>
             <ul class="social-list list">
               <li class="social-list_icon">
-                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                <a class="social-link_footer" href>
+                  <svg class="social-icon_footer" width="24" height="24">
                       <use href="./images2/iconsfooter.svg#icon-instagramfooter"></use>
                     </svg></a>
               </li>
               <li class="social-list_icon">
-                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                <a class="social-link_footer" href>
+                  <svg class="social-icon_footer" width="24" height="24">
                       <use href="./images2/iconsfooter.svg#icon-twitterfooter"></use>
                     </svg></a>
               </li>
               <li class="social-list_icon">
-                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                <a class="social-link_footer" href>
+                  <svg class="social-icon_footer" width="24" height="24">
                       <use href="./images2/iconsfooter.svg#icon-facebookfooter"></use>
                     </svg></a>
               </li>
               <li class="social-list_icon">
-                <a href="" class="social-link_footer"><svg class="social-icon_footer" width="24" height="24">
+                <a class="social-link_footer" href>
+                  <svg class="social-icon_footer" width="24" height="24">
                       <use href="./images2/iconsfooter.svg#icon-linkedinfooter"></use>
                     </svg></a>
               </li>
